# slipstream

./: .env.example  .gitignore  .mcp.json  Anchor.toml  DEMO.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
agent/: scout.ts
bridge/: context.ts  mirror.ts  session.ts
data/: leaders.json
flash/: mirror-plan.ts  v2.ts
indexer/: flash.ts  server.ts
mcp/: server.ts
programs/copy-engine/: Cargo.toml
programs/copy-engine/src/: errors.rs  lib.rs  oracle.rs  state.rs
scripts/: v2-mirror-plan.ts
server/: cache.ts  candles.ts  chain.ts  http.ts  index.ts  prices.ts  validate.ts
tests/: common.ts  er-roundtrip.ts  oracle-crank.ts
web/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/app/: layout.tsx  page.tsx
web/src/components/: Backdrop.tsx  Brand.tsx  CandleChart.tsx  GuardViz.tsx  Heatmap.tsx  LeaderCard.tsx  PnlChart.tsx  Stepper.tsx  SwipeDeck.tsx  TxFeed.tsx
web/src/components/landing/: HeroCandles.tsx  HeroChart.tsx  HeroPreview.tsx  LandingNav.tsx  LeaderTicker.tsx  PriceTicker.tsx  sections.tsx
web/src/components/ui/: Bezel.tsx  Button.tsx
web/src/components/wallet/: AccountChip.tsx  ConnectButton.tsx  WalletProviders.tsx
web/src/lib/: api.ts  format.ts  types.ts
web/src/screens/: Dashboard.tsx  Intake.tsx  Portfolio.tsx  Scout.tsx
